# my-agent-project

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md
sdk/: README.md  pyproject.toml
sdk/examples/: orchestrator.yaml
sdk/task_orchestrator/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py  prompt.py  traversal.py
sdk/task_orchestrator/backends/: __init__.py  tm_base.py  tm_cli.py
sdk/task_orchestrator/runners/: __init__.py  base.py  cursor_cli.py
sdk/tests/: __init__.py  test_orchestrator.py  test_prompt.py  test_traversal.py
server/: cli.py  db.py  mcp_enrich.py  mcp_instructions.py  mcp_read_hints.py  mcp_resources.py  mcp_response_hints.py  mcp_server.py  mcp_tool_descriptions.py  mcp_validation.py  mcp_workflows.py  migrate_project_mcp.py  requirements.txt  schema.sql
server/dashboard/: app.py  markdown_util.py  package-lock.json  package.json
server/dashboard/static/css/: app.css  (+1 more)
server/dashboard/templates/: admin_agent_detail.html  admin_agents.html  admin_settings.html  base.html  doc.html  index.html  login.html  project.html  project_audit.html  project_docs_hub.html  task_detail.html  task_item.html
server/tests/: browser_smoke_dashboard.py  conftest.py  test_cli.py  test_dashboard_ui.py  test_db.py  test_mcp_instructions.py  test_mcp_read_hints.py  test_mcp_resources.py  test_mcp_response_hints.py  test_mcp_tool_descriptions.py  test_mcp_validation.py  test_mcp_workflows.py
skill/: SKILL.md  examples.md  reference.md
skill/task-management/: SKILL.md
skill/task-management/references/: examples.md  reference.md
(+15 files in other folders)
